# comp-4800-projects

./: .gitignore
assignment4/: Makefile  a4.c  a42.c
demo-timer/: Makefile  main.c
video_player/: CMakeLists.txt  Makefile  README.md  a2.c  firework.c  firework.h  frame-1-1.pgm  frame-1-2.pgm  frame-1-3.pgm  frame-1-4.pgm  frame-1-5.pgm  frame-2-1.pgm  frame-2-2.pgm  frame-2-3.pgm  frame-2-4.pgm  frame-2-5.pgm  frame-3-1.pgm  frame-3-2.pgm  frame-3-3.pgm  frame-3-4.pgm  frame-3-5.pgm  grayscale.c  main.c  polish.c  queue.c  queue.h  readme.txt
